[gd_scene load_steps=2 format=3 uid="uid://c8eg5op7dwkx6"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_qk83h"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_qk83h")

[node name="NewCanvasBtn" type="Button" parent="."]
offset_left = 387.0
offset_top = 208.0
offset_right = 630.0
offset_bottom = 313.0
theme_override_font_sizes/font_size = 40
text = "New Canvas"

[node name="LoadFileBtn" type="Button" parent="."]
offset_left = 389.0
offset_top = 357.0
offset_right = 632.0
offset_bottom = 462.0
theme_override_font_sizes/font_size = 40
text = "Load File..."

[node name="QuitBtn" type="Button" parent="."]
offset_left = 855.0
offset_top = 511.0
offset_right = 1098.0
offset_bottom = 616.0
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="pressed" from="NewCanvasBtn" to="." method="_on_new_canvas_btn_pressed"]
[connection signal="pressed" from="LoadFileBtn" to="." method="_on_load_file_btn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_quit_btn_pressed"]
